--- a/dad.css
+++ b/dad.css
@@ -100,3 +100,29 @@ img {
     width: 50%;
     margin: auto;
 }
+
+@media(max-width: 700px) {
+    .linkToMe {
+        top: -36px;
+        font-size: 14px;
+    }
+
+    .linkToMeShadow {
+        top: -32px;
+        font-size: 14px;
+    }
+
+    .linkToMom {
+        top: -36px;
+        font-size: 14px;
+    }
+
+    .linkToMomShadow {
+        top: -32px;
+        font-size: 14px;
+    }
+
+    h1 {
+        padding-top: 15px;
+    }
+}
